--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ body {
   min-height: 100vh;
   min-height: 100svh;
 }
-/* TO DO: center the container on bigger screens */
+
 .app-container {
   width: 100%;
-  max-width: 500px;
+  max-width: 400px;
   margin: 0 auto;
   position: relative;
   box-shadow: 0 0 5px rgb(193, 193, 193);
@@ -97,9 +97,7 @@ body {
 
 .search-btn-right {
   background: transparent;
-  /* helt genomskinlig */
   border: 1px solid rgba(255, 255, 255, 0.2);
-  /* tunn kant för att markera knappens form */
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   display: flex;
   align-items: center;
@@ -141,41 +139,50 @@ body {
 
 .weather-text {
   position: relative;
-  margin: 0px 16px;
+  margin-top: 72px;
+}
+
+.time-condition-flex-container {
+  display: flex;
+  gap: 24px;
+  align-items: center;
 }
 
 .weather-condition {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 5px;
 }
 
 .weather-condition .weather-icon {
   display: flex;
-  gap: 12px;
-  min-width: 90px;
+  min-width: 60px;
   height: auto;
 }
 
 h1 {
   font-size: 60px;
   font-weight: 400;
+  margin: 16px 0;
 }
 
 h2 {
   font-size: 32px;
   font-weight: 300;
+  margin: 0;
 }
 
 h3 {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 300;
+  margin: 12px 0;
 }
 
 .sunrise-sunset {
   display: flex;
-  gap: 42px;
-  margin-left: 16px;
+  justify-content: space-around;
+  gap: 24px;
+  margin-top: 24px;
 }
 
 .arrow-button {
@@ -205,7 +212,6 @@ h3 {
   display: flex;
   justify-content: space-around;
   border-radius: 76px;
-  min-height: 56px;
   padding: 7px 0px;
 }
 
