--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .app-container {
   width: 100%;
   max-width: 400px;
-  margin: 0 auto;
+  margin: 30px auto;
   position: relative;
   box-shadow: 0 0 5px rgb(193, 193, 193);
 }
