--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ body {
 .default-image {
   background: 
     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./images/sky.jpeg");
+    url("./images/default.jpg");
     background-size: cover;
     background-position: center;  
 }
@@ -137,7 +137,7 @@ body {
 .stockholm {
   background: 
     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./images/stockholm-2.jpeg");
+    url("./images/stockholm.jpg");
     background-size: cover;
     background-position: center;  
 }
@@ -145,7 +145,7 @@ body {
 .goteborg {
   background: 
     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./images/goteborg-1.jpg");
+    url("./images/goteborg.jpg");
     background-size: cover;
     background-position: center;  
 }
@@ -153,7 +153,7 @@ body {
 .umea {
   background: 
     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./images/umea-1.jpg");
+    url("./images/umea.jpg");
     background-size: cover;
     background-position: center;  
 }
