--- a/style.css
+++ b/style.css
@@ -9,16 +9,17 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  min-height: 100svh;
 }
 
 .app-container {
   width: 100%;
   max-width: 480px;
-  margin: 30px auto;
   position: relative;
   box-shadow: 0 0 5px rgb(193, 193, 193);
 }
+
+
+/* ----- styling for search bar ----- */
 
 .search-container {
   position: absolute;
@@ -116,6 +117,9 @@ body {
   transform: scale(1.05);
 }
 
+/* ------------------- */
+
+
 .weather-overview {
   position: relative;
   display: flex;
@@ -126,6 +130,9 @@ body {
   clip-path: ellipse(110% 75% at 50% 10%);
   z-index: 0;
 }
+
+
+/* ----- classes for changing background image depending on location ----- */
 
 .default-image {
   background: 
@@ -158,6 +165,8 @@ body {
     background-size: cover;
     background-position: center;  
 }
+
+/* ------------------- */
 
 .weather-effect {
   position: absolute;
@@ -284,4 +293,13 @@ h3 {
   justify-content: space-between;
   gap: 12px;
   min-width: 180px;
+}
+
+
+@media (min-width: 668px) {
+  
+  .app-container{
+  margin: 30px auto;
+  }
+
 }
