--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100svh;
 }
 
 .app-container {
@@ -254,7 +254,7 @@ h3 {
   margin-top: 24px;
 }
 
-.arrow-button {
+/* .arrow-button {
   background-color: rgba(117, 122, 255, 1);
   color: white;
   font-size: 44px;
@@ -270,7 +270,43 @@ h3 {
   justify-self: flex-end;
   margin-bottom: 42px;
   margin-right: 20px;
+} */
+
+/* .arrow-button {
+  position: absolute;
+  right: 20px;
+  bottom: 500px;
+
+  background-color: rgba(117, 122, 255, 1);
+   color: white;
+  font-size: 44px;
+  border: none;
+  width: 101px;
+  height: 101px;
+  border-radius: 50%;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.35);
+  z-index: 1000;
+
+  
+} */
+
+.arrow-button {
+  position: absolute;
+  top: 48%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+  width: 101px;
+  height: 101px;
+  border-radius: 50%;
+  font-size: 44px;
+  background-color: rgba(117, 122, 255, 1);
+  color: white;
+  border: none;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.35);
+  z-index: 1000;
+  cursor: pointer;
 }
+
 
 .weekly-details {
   margin-top: 7px;
